opengist/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opengist
  namespace: opengist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opengist
  template:
    metadata:
      labels:
        app: opengist
    spec:
      containers:
        - name: opengist
          image: ghcr.io/thomiceli/opengist:1.14
          ports:
            - containerPort: 6157
          volumeMounts:
            - name: opengist-data
              mountPath: /opengist
      volumes:
        - name: opengist-data
          persistentVolumeClaim:
            claimName: opengist-data
