opengist/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengist
  namespace: opengist
spec:
  selector:
    app: opengist
  ports:
    - port: 6157
      targetPort: 6157
