opengist/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opengist
  namespace: opengist
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: mydnschallenge
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - g.doany.io
  rules:
    - host: g.doany.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opengist
                port:
                  number: 6157
